<resources>
    <string name="app_name">Currency rate</string>
    <string name="title_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_favorite_currencies">Favorite currencies</string>
    <string name="text_hint">You can add your favorite currencies on the Home page</string>
    <string name="sorting_settings">Sorting settings</string>
    <string name="alphabetical_sorting">Alphabetical sorting</string>
    <string name="value_sorting">Value sorting</string>
    <string name="descending_order">Sort in descending order</string>
    <string name="ascending_order">Sort in ascending order</string>
    <string name="delete_all">Delete all</string>
    <string name="retry">Retry</string>
</resources>