<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.screens.settings.SettingsFragment">

    <TextView
        android:id="@+id/text_sorting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:text="@string/sorting_settings"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/container_radiogroups"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_sorting">

        <RadioGroup
            android:id="@+id/radiogroup_by_sorting_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/background_frame"
            android:padding="10dp">

            <RadioButton
                android:id="@+id/alphabetical_sorting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alphabetical_sorting" />

            <RadioButton
                android:id="@+id/value_sorting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value_sorting" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/radiogroup_by_sorting_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/background_frame"
            android:padding="10dp">

            <RadioButton
                android:id="@+id/ascending_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ascending_order" />

            <RadioButton
                android:id="@+id/descending_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descending_order" />
        </RadioGroup>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>